--- a/index.html
+++ b/index.html
@@ -423,6 +423,27 @@ details {
     <summary></summary>
     <span class="notice">Embodied interaction with tangible interactive objects can be beneficial for introducing abstract scientific concepts, especially for young learners. Nevertheless, there is limited comparative evaluation of alternative interaction modalities with contemporary educational technology, such as tablets and robots. In this study, we explore the effects of touch and gestural interaction with a tablet and a robot, in the context of a primary education physics course about the notion of friction. For this purpose, 56 students participated in a between-groups study that involved four computationally enhanced interventions which correspond to different input and output modalities, respectively: (1) touch-virtual, (2) touch-physical, (3) hand gesture-virtual, and (4) hand gesture-physical. We measured students’ friction knowledge and examined their views. We found that the physical conditions had greater learning impact concerning friction knowledge compared to the virtual way. Additionally, physical manipulation benefited those learners who had misconceptions or limited initial knowledge about friction. We also found that students who used the more familiar touchscreen interface demonstrated similar learning gains and reported higher usability compared to those using the hand-tilt interface. These findings suggest that user interface familiarity should be carefully balanced with user interface congruency, in order to establish accessibility to a scientific concept in a primary education context.</span>
 </details>
+</li>
+<li><span id="Merkouris_2019b"><span style="font-variant: small-caps">Merkouris, A. and Chorianopoulos, K.</span> 2019. Programming Embodied Interactions with a Remotely Controlled Educational Robot. <i>ACM Trans. Comput. Educ.</i> <i>19</i>, 4, 40:1–40:19.</span>
+
+
+  <a href="https://doi.org/10.1145/3336126"><i class="ai ai-doi"></i></a>
+
+
+
+  <a href="http://pdf.epidro.me/Merkouris_2019b.pdf"><i class="fas fa-file-pdf"></i></a>
+
+
+<style>
+details {
+    display: inline;
+}
+</style>
+
+<details close="">
+    <summary></summary>
+    <span class="notice">Contemporary research has explored educational robotics, but it has not examined the development of computational thinking in the context of programming embodied interactions. Apart from the goal of the robot and how the robot will interact with its environment, another important aspect that should be taken into consideration is whether and how the user will physically interact with the robot. We recruited 36 middle school students to participate in a six-session robotics curriculum in an attempt to expand their learning in computational thinking. Participants were asked to develop interfaces for the remote control of a robot using diverse interaction styles from low-level to high-level embodiment, such as touch, speech, and hand and full-body gestures. We measured students’ perception of computing, examined their computational practices, and assessed the development of their computational thinking skills by analyzing the sophistication of the projects they created during a problem-solving task. We found that students who programmed combinations of low embodiment interfaces or interfaces with no embodiment produced more sophisticated projects and adopted more sophisticated computational practices compared to those who programmed full-body interfaces. These findings suggest that there might be a tradeoff between the appeal and the cognitive benefit of rich embodied interaction with a remotely controlled robot. In further work, educational robotics research and competitions might be complemented with a hybrid approach that blends the traditional autonomous robot movement with student enactment.</span>
+</details>
 </li></ol>
 
 <p><a href="https://pdf.epidro.me">All publications</a></p>
@@ -1090,6 +1111,8 @@ details {
   <a href="https://doi.org/10.1145/3336126"><i class="ai ai-doi"></i></a>
 
 
+
+  <a href="http://pdf.epidro.me/Merkouris_2019b.pdf"><i class="fas fa-file-pdf"></i></a>
 
 
 <style>
